src/Boo.Lang.Parser/PreProcessorExpressions.g4
// Copyright (c) the Boo contributors
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without modification,
// are permitted provided that the following conditions are met:
//
//     * Redistributions of source code must retain the above copyright notice,
//     this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above copyright notice,
//     this list of conditions and the following disclaimer in the documentation
//     and/or other materials provided with the distribution.
//     * Neither the name of Rodrigo B. de Oliveira nor the names of its
//     contributors may be used to endorse or promote products derived from this
//     software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

// The condition language of Boo.Lang.Useful's #if preprocessor: symbols
// combined with &&, || and !. It is not Boo, which is why it has a grammar of
// its own rather than going through BooParser.
//
// Ported from PreProcessorExpressions.g, the ANTLR 2.7 grammar. Kept faithful
// to it, including that ! applies to a symbol rather than to a parenthesised
// expression, so !(A && B) is as invalid now as it was before.

grammar PreProcessorExpressions;

start_
	:	expression EOF
	;

expression
	:	conjunction (OR conjunction)*
	;

conjunction
	:	atom (AND atom)*
	;

atom
	:	NOT ID					# negatedSymbol
	|	ID						# symbol
	|	LPAREN expression RPAREN	# group
	;

AND		:	'&&' ;
OR		:	'||' ;
NOT		:	'!' ;
LPAREN	:	'(' ;
RPAREN	:	')' ;

ID		:	[a-zA-Z_] [a-zA-Z_0-9]* ;

COMMENT	:	'//' ~[\r\n]* -> skip ;
WS		:	[ \t\r\n]+ -> skip ;
